--- a/src/app/dialog-box/dialog-box.component.html
+++ b/src/app/dialog-box/dialog-box.component.html
@@ -24,10 +24,12 @@
   </mat-form-field>
   <mat-form-field *ngIf="action == 'Update';">
     <mat-label>{{action}} Type</mat-label>
-    <mat-select [(value)]="selected">
-      <mat-option>{{local_data.Ttype}} | Current</mat-option>
-      <mat-option value="DDR3">DDR3</mat-option>
-      <mat-option value="DDR4">DDR4</mat-option>
+    <mat-select matNativeControl >
+
+      <mat-option *ngFor="let type of Ttypes" [value]="type.id">
+        {{type.name}}
+      </mat-option>
+
     </mat-select>
   </mat-form-field>
 </div>
